css/styles.css
/* ... */
/* HTML5 display-role reset for older browsers */

article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}

body {
  line-height: 1;
}

ol,
ul {
  list-style: none;
}

blockquote,
q {
  quotes: none;
}

blockquote:before,
blockquote:after {
  content: '';
  content: none;
}

q:before,
q:after {
  content: '';
  content: none;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
}

*,
*::before,
*::after {
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
}

/* poppins-300 - latin */

@font-face {
  font-family: 'Poppins';
  font-style: normal;
  font-weight: 300;
  src: url("../fonts/poppins-v15-latin-300.eot");
  /* IE9 Compat Modes */
  src: local(""), url("../fonts/poppins-v15-latin-300.eot?#iefix") format("embedded-opentype"), url("../fonts/poppins-v15-latin-300.woff2") format("woff2"), url("../fonts/poppins-v15-latin-300.woff") format("woff"), url("../fonts/poppins-v15-latin-300.ttf") format("truetype"), url("../fonts/poppins-v15-latin-300.svg#Poppins") format("svg");
  /* Legacy iOS */
}

/* poppins-300italic - latin */

@font-face {
  font-family: 'Poppins';
  font-style: italic;
  font-weight: 300;
  src: url("../fonts/poppins-v15-latin-300italic.eot");
  /* IE9 Compat Modes */
  src: local(""), url("../fonts/poppins-v15-latin-300italic.eot?#iefix") format("embedded-opentype"), url("../fonts/poppins-v15-latin-300italic.woff2") format("woff2"), url("../fonts/poppins-v15-latin-300italic.woff") format("woff"), url("../fonts/poppins-v15-latin-300italic.ttf") format("truetype"), url("../fonts/poppins-v15-latin-300italic.svg#Poppins") format("svg");
  /* Legacy iOS */
}

/* poppins-regular - latin */

@font-face {
  font-family: 'Poppins';
  font-style: normal;
  font-weight: 400;
  src: url("../fonts/poppins-v15-latin-regular.eot");
  /* IE9 Compat Modes */
  src: local(""), url("../fonts/poppins-v15-latin-regular.eot?#iefix") format("embedded-opentype"), url("../fonts/poppins-v15-latin-regular.woff2") format("woff2"), url("../fonts/poppins-v15-latin-regular.woff") format("woff"), url("../fonts/poppins-v15-latin-regular.ttf") format("truetype"), url("../fonts/poppins-v15-latin-regular.svg#Poppins") format("svg");
  /* Legacy iOS */
}

/* poppins-500 - latin */

@font-face {
  font-family: 'Poppins';
  font-style: normal;
  font-weight: 500;
  src: url("../fonts/poppins-v15-latin-500.eot");
  /* IE9 Compat Modes */
  src: local(""), url("../fonts/poppins-v15-latin-500.eot?#iefix") format("embedded-opentype"), url("../fonts/poppins-v15-latin-500.woff2") format("woff2"), url("../fonts/poppins-v15-latin-500.woff") format("woff"), url("../fonts/poppins-v15-latin-500.ttf") format("truetype"), url("../fonts/poppins-v15-latin-500.svg#Poppins") format("svg");
  /* Legacy iOS */
}

/* poppins-600 - latin */

@font-face {
  font-family: 'Poppins';
  font-style: normal;
  font-weight: 600;
  src: url("../fonts/poppins-v15-latin-600.eot");
  /* IE9 Compat Modes */
  src: local(""), url("../fonts/poppins-v15-latin-600.eot?#iefix") format("embedded-opentype"), url("../fonts/poppins-v15-latin-600.woff2") format("woff2"), url("../fonts/poppins-v15-latin-600.woff") format("woff"), url("../fonts/poppins-v15-latin-600.ttf") format("truetype"), url("../fonts/poppins-v15-latin-600.svg#Poppins") format("svg");
  /* Legacy iOS */
}

html {
  font-size: 10px;
}

body {
  position: relative;
  font-size: 1.6rem;
  font-family: "Poppins", "Verdana", sans-serif;
}

.image {
  display: block;
  height: 100%;
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
}

.button-image {
  width: 6px;
  padding-bottom: 12px;
  margin-left: 1.2rem;
}

.logo {
  display: block;
  width: 115px;
  height: 40px;
}

.logo-image {
  background-image: url("../img/logo.png");
}

.icon--user {
  background-image: url("../img/icons/user.png");
}

.icon--search {
  background-image: url("../img/icons/search.png");
}

.icon--play {
  background-image: url("../img/icons/play.png");
}

.icon--fb {
  background-image: url("../img/icons/fb.png");
}

.icon--tw {
  background-image: url("../img/icons/tw.png");
}

.icon--pt {
  background-image: url("../img/icons/pt.png");
}

.icon--in {
  background-image: url("../img/icons/in.png");
}

.button {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  color: #fff;
  font-size: 1.2rem;
  font-weight: normal;
  text-decoration: none;
  text-transform: uppercase;
  background: -o-linear-gradient(45deg, #2453e7 0%, #9678e5 75%);
  background: linear-gradient(45deg, #2453e7 0%, #9678e5 75%);
  padding: 16px 26px;
  border-radius: 25px;
  -webkit-transition: .2s all linear;
  -o-transition: .2s all linear;
  transition: .2s all linear;
}

.button:hover {
  -webkit-filter: drop-shadow(3px 3px 2px #0005);
          filter: drop-shadow(3px 3px 2px #0005);
}

.button--transparent {
  background: transparent;
  color: #fe688b;
  padding: 0;
}

.button--transparent .button__text {
  border-bottom: 0.1rem solid #fe688b;
  padding-bottom: .2rem;
}

.wrapper {
  width: 100%;
  max-width: 1200px;
  padding: 0 20px;
  margin: 0 auto;
}

.header {
  position: absolute;
  width: 100%;
  z-index: 100;
}

.header__wrapper {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  height: 110px;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}

.header__logo {
  position: relative;
  top: -6px;
}

.header__menu {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}

.header__menu > li {
  margin-left: 50px;
}

.header__link {
  font-weight: normal;
  text-decoration: none;
  color: black;
  text-transform: capitalize;
  -webkit-transition: .2s all linear;
  -o-transition: .2s all linear;
  transition: .2s all linear;
}

.header__link:hover {
  color: #fe688b;
  border-bottom: 1px solid #fe688b;
}
/* ... */

